--- a/dawg.html
+++ b/dawg.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <img src="IMG_3657.jpg">
+  <img src="https://github.com/rileyjirav/personal/blob/main/IMG_3657.jpg?raw=true">
   <script>
     
   </script>
