--- a/dawg.html
+++ b/dawg.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <img src="https://github.com/rileyjirav/personal/blob/main/IMG_3657.jpg?raw=true">
+  <img src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/IMG_3657.jpg">
   <script>
     
   </script>
