--- a/dawg.html
+++ b/dawg.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <img src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/IMG_3657.jpg" usemap="#jacksonMap">
-  <map name = "jacksonMap">
+  <img src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/IMG_3657.jpg" usemap="#dogMap">
+  <map name = "dogMap">
     <area shape="rect" coords="155,65,415,290" onclick="jaxFunction()">
     <area shape="rect" coords="615,190,830,390" onclick="bumFunction()">
   </map>
