--- a/dawg.html
+++ b/dawg.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <img src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/IMG_3657.jpg" usemap="#dogMap">
+  <img src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/5793514.png" >
   <map name = "dogMap">
     <area shape="rect" coords="155,65,415,290" onclick="jaxFunction()">
     <area shape="rect" coords="615,190,830,390" onclick="bumFunction()">
