--- a/runnin.html
+++ b/runnin.html
@@ -1,4 +1,6 @@
 <html>
+<head>
+ <img id="image" src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/Untitled.png" 
 <script>
 let image = document.getElementById('image');
 image.style.position = 'relative';
@@ -17,6 +19,11 @@ function moveImage(){
 image.addEventListener('click', moveImage);
 var timing = setInterval(moveImage, 1000);
 </script>
+
+
+  
+</head>  
+
   
 </html>
 
