--- a/runnin.html
+++ b/runnin.html
@@ -2,8 +2,7 @@
 <head>
  <img id="image" src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/Untitled.png" >
  <style>
-.test{cursor: 
-  ;}
+  body{cursor: url(https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/images.png),auto}
  </style>
 <script>
 let image = document.getElementById('image');
