--- a/runnin.html
+++ b/runnin.html
@@ -8,9 +8,8 @@
  </style>
 <script>
 const moles = [document.getElementById('image0'),document.getElementById('image1'),document.getElementById('image2')];
-moles.style.position = 'relative';
-const MOLE_SIZE = 100px;
-const PAGE_HEIGHT = 1080px;
+const MOLE_SIZE = 100;
+const PAGE_HEIGHT = 1080;
 
   function moveImage(){
   for (const mole of moles){
