--- a/runnin.html
+++ b/runnin.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
- <style>
-  body {
-    cursor: url(https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/mallet.png),auto
-  }
-  img {
-    position: absolute;
-  }
- </style>
+  <style>
+    body{cursor: url(https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/mallet.png),auto}
+   </style>
+<img id="image0" src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/Whack-a-mole.png" width="100px">
+<img id="image1" src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/Whack-a-mole.png" width="100px">
+<img id="image2" src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/Whack-a-mole.png" width="100px">
 </head>
 <body>
- <img id="image0" src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/Whack-a-mole.png" width="100px">
- <img id="image1" src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/Whack-a-mole.png" width="100px">
- <img id="image2" src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/Whack-a-mole.png" width="100px">
-
 <script>
 const moles = [
   { img: document.getElementById('image0'), isActive: true, ID: 'mole0' },
@@ -49,6 +43,7 @@ for (const mole of moles) {
 setInterval(moveImage, 600);
 </script>
 </body>
+
 </html>
 
 
