--- a/dawg.html
+++ b/dawg.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+  <style>
+    body{cursor: url(https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/mallet.png),auto}
+   </style>
   <img src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/IMG_3657.jpg">
   <script>
     function jaxFunction(){
