--- a/runnin.html
+++ b/runnin.html
@@ -2,13 +2,12 @@
 <html>
 <head>
   <style>
-    body{cursor: url(https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/mallet.png),auto}
+    *{cursor: url(https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/mallet.png),auto}
    </style>
 <img id="image0" src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/Whack-a-mole.png" width="100px">
 <img id="image1" src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/Whack-a-mole.png" width="100px">
 <img id="image2" src="https://raw.githubusercontent.com/rileyjirav/personal/refs/heads/main/Whack-a-mole.png" width="100px">
-</head>
-<body>
+
 <script>
 const moles = [
   { img: document.getElementById('image0'), isActive: true, ID: 'mole0' },
@@ -42,8 +41,7 @@ for (const mole of moles) {
 
 setInterval(moveImage, 600);
 </script>
-</body>
-
+</head>
 </html>
 
 
